feat: add review word openapi
