# docs/swagger.json
@@ -211,6 +211,40 @@
                 }
             }
         },
+        "/openapi/other/review_text": {
+            "post": {
+                "description": "检查文本中是否包含敏感词, 无需提供API key, 敏感词库每小时更新一次\u003cbr\u003e\n以下为额外的字段说明: \u003cbr\u003e\nlevel: 默认使用 0, 少部分表达式会使用此字段\u003cbr\u003e\nchannel: 在不同的场景下此值会不一样, 部分值及其说明如下\u003cbr\u003e\n- item_comment: 默认情况下使用此channel\u003cbr\u003e\n- check_long_numbers: 需要额外检查文本是否包含长数字时使用此channel\u003cbr\u003e\n- World: 文本来源为世界聊天时使用此channel\u003cbr\u003e",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "其他"
+                ],
+                "summary": "敏感词检查",
+                "parameters": [
+                    {
+                        "description": "请求时需要在 Body 携带以下查询参数",
+                        "name": "Request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/other.ReviewWordRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "成功时返回",
+                        "schema": {
+                            "$ref": "#/definitions/other.ReviewWordResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/openapi/owner/rental_server/ban_player": {
             "post": {
                 "description": "更新租赁服玩家黑名单状态, 游戏账号需要拥有指定的租赁服, 且需要提供 API key\n注意: 此 API 会尝试进行游戏登录 (Owner)",
@@ -771,6 +805,77 @@
                     "items": {
                         "type": "object",
                         "additionalProperties": {}
+                    }
+                },
+                "message": {
+                    "description": "成功或失败原因",
+                    "type": "string"
+                },
+                "success": {
+                    "description": "是否成功",
+                    "type": "boolean"
+                }
+            }
+        },
+        "other.ReviewResult": {
+            "type": "object",
+            "properties": {
+                "end": {
+                    "description": "匹配的敏感词在文本中的结束位置",
+                    "type": "integer"
+                },
+                "group": {
+                    "description": "匹配的敏感词规则组, 其中 \"nickname\" 只在昵称检测时使用",
+                    "type": "string"
+                },
+                "index": {
+                    "description": "匹配的敏感词在文本中的起始位置",
+                    "type": "integer"
+                },
+                "start": {
+                    "description": "匹配的敏感词在文本中的起始位置",
+                    "type": "integer"
+                },
+                "text": {
+                    "description": "匹配的敏感词",
+                    "type": "string"
+                }
+            }
+        },
+        "other.ReviewWordRequest": {
+            "type": "object",
+            "properties": {
+                "channel": {
+                    "description": "检测频道, 不填写则使用默认值 item_comment",
+                    "type": "string",
+                    "maxLength": 100,
+                    "example": "item_comment"
+                },
+                "content": {
+                    "description": "被检测的文本",
+                    "type": "string",
+                    "minLength": 1
+                },
+                "first_only": {
+                    "description": "是否只返回第一个匹配的敏感词, 默认为 false",
+                    "type": "boolean",
+                    "example": false
+                },
+                "level": {
+                    "description": "检测级别, 不填写则使用默认值 0",
+                    "type": "string",
+                    "maxLength": 100,
+                    "example": "0"
+                }
+            }
+        },
+        "other.ReviewWordResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/other.ReviewResult"
                     }
                 },
                 "message": {
